--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA MUNDO iiiiiiiiiiiii</h1>
+    <h2>Proyectos</h2>
+    <li>
+        <a href="{% url 'admin:index' %}">Sistema de gestión de mantenimiento y repuestos.</a>
+    </li>
+    
+    
 </body>
 </html>
