--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Proyectos</h2>
+    <h2>Proyectos Python Django </h2>
     <li>
         <a href="{% url 'admin:index' %}">Sistema de gestión de mantenimiento y repuestos.</a>
     </li>
